--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,59 @@
+html,
+body,
+#root {
+  height: 100%;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .App-header {
   background-color: #282c34;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  height: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.App-ahgLogo {
+  border-right: 5px solid #fff;
+  font-weight: 900;
+  padding: 4px 12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-ahgName {
+  margin: 12px;
+}
+
+.App-main {
+  display: flex;
+  flex: 1 1 auto;
+  flex-flow: row-reverse;
+  min-height: 1px;
+}
+
+.App-heroImg {
+  max-width: 100%;
+  width: 50vw;
+  object-fit: cover;
+}
+
+.App-page {
+  flex: 1 1 auto;
+  min-width: 1px;
+}
+
+.App-contents {
+  max-width: 550px;
+  margin: 25% auto 0;
+}
+
+.App-title {
+  font-family: 'Playfair Display', serif;
+  font-size: 5em;
+  font-weight: 500;
+  line-height: 1.1em;
 }
