--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,21 @@ body,
   font-weight: 500;
   line-height: 1.1em;
 }
+
+.DatePicker {
+}
+
+.DatePicker-label {
+  color: #888;
+  display: inline-block;
+  font-size: 0.8em;
+  font-weight: 500;
+  margin-right: 8px;
+  text-transform: uppercase;
+}
+
+.DatePicker-dateInput {
+  display: block;
+  font-size: 1.6em;
+  margin-top: 4px;
+}
